# scancan

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.cron  Dockerfile.freshclam  Dockerfile.scancan  LICENSE  Makefile  README.md  copilot_core_instructions.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: bandit.yml
clamav_config/: clamd.conf  freshclam.conf  freshclam_cron
scancan/: clamav.py  config.py  logger.py  main.py  models.py  utils.py
src/: __init__.py  clamav.py  config.py  logger.py  main.py  models.py
tests/: test_clamav.py  test_logger.py  test_main.py  test_models.py  test_scancan.py  test_utils.py
