[project]
authors = [
    {name = "Bradley Sacks", email = "bradsacks99@gmail.com"},
]
license = {text = "GPL-3.0-only"}
requires-python = "<4.0,>=3.10"

name = "ScanCan"
version = "0.1.0"
description = "Virus Scanning API"
readme = "README.md"

dependencies = [
    "fastapi[standard]>=0.79.1,<1.0.0",
    "pyvalve>=0.1.3,<1.0.0",
    "aiofile>=3.8.8,<4.0.0",
    "python-multipart>=0.0.5,<1.0.0",
    "aiopathlib>=0.5.0,<1.0.0",
    "aiohttp>=3.9.1,<4.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest<8.0.0,>=7.4.4",
    "pytest-pylint<1.0.0,>=0.18.0",
    "pre-commit<4.0.0,>=3.6.0",
    "pytest-cov<5.0.0,>=4.1.0",
    "pytest-mypy<1.0.0,>=0.9.1",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
